src/Bloco 2 Introdução ao ANTLR-20250225/bloco2/b2_08/Calculator.g4
grammar Calculator;

program: stat* EOF;

stat :
    (expr | assign) ? NEWLINE;

assign :
    ID '=' expr;

expr :
    op=( '+' | '-' ) expr               #ExprUnary
    | '(' expr ')'                      #ExprParent
    | ID                                #ExprID
    | expr op=( '*' | '/' | '%' ) expr  #ExprMultDivMod
    | expr op=( '+' | '-' ) expr        #ExprAddSub
    | Integer                           #ExprInteger
    ;

ID: [a-zA-Z]+;
Integer: [0-9]+;
NEWLINE: '\r'? '\n';
WS: [ \t]+ -> skip;
COMMENT: '#' .*? '\n' -> skip;
